# rust-api-server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  database.postgres.sql  docker-compose.yaml
bruno/: opencollection.yml
bruno/GRPC/: Auth.yml  Heath check.yml  Protected.yml  folder.yml
bruno/HTTP/: Health Check.yml  folder.yml
bruno/HTTP/Auth/: Login Cookie.yml  Login JWT.yml
libs/: Cargo.toml
libs/src/: jwt.rs  lib.rs
libs/src/actix/middlewares/: jwt_authorize.rs
libs/src/axum/middlewares/: jwt_authorize.rs
libs/src/tonic/middlewares/: jwt_authorize.rs  mod.rs
proto/: auth.proto  common.proto  heath.proto  order.proto  protected.proto  seat.proto  user.proto
src/: config.rs  inject.rs  main.rs  proto.rs
src/controllers/: auth.rs  order.rs  seat.rs  user.rs
src/controllers/v1/: auth.rs  heath.rs  mod.rs  protected.rs
src/controllers/v1/auth/: errors.rs  login.rs  logout.rs  mod.rs
src/controllers/v1/heath/: healthz.rs  mod.rs
src/controllers/v1/protected/: me.rs  mod.rs
src/entities/: bus.rs  mod.rs  prelude.rs  route.rs  seat.rs  ticket.rs  trip.rs  user.rs
src/grpc/: mod.rs
src/grpc/endpoints/: auth.rs  mod.rs  order.rs  seat.rs  user.rs
src/http/: routes.rs
src/http/endpoints/v1/: auth.rs  mod.rs  seat.rs
src/http/middlewares/: mod.rs
src/libs/: jwt.rs  mod.rs
src/libs/tonic/middlewares/: jwt_authorize.rs
src/services/: auth.rs  jwt.rs  mod.rs  seat.rs
src/services/auth/: auth.rs  errors.rs  mod.rs
src/services/jwt/: errors.rs  jwt.rs  mod.rs
