[package]
name = "rust-api-server"
version = "0.1.0"
edition = "2024"

[target.x86_64-unknown-linux-musl]
linker = "musl-gcc"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.11"
log = "0.4"
async-trait = "0.1"
dotenvy = "0.15"
futures-util = "0.3"
jsonwebtoken = "9"
actix-cors = "0.7"
actix-files = "0.6"
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

# GRPC Section
tonic = "0.12"
prost = "0.13"
tonic-web = "0.12"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
http = "1"
[build-dependencies]
tonic-build = "0.12"