[package]
name = "rust-api-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
libs = { path = "./libs" }
tokio = { version = "1", features = ["full"] }
tonic = "0.14"
tonic-prost = "0.14"
tonic-web = "0.14"
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[build-dependencies]
tonic-prost-build = "0.14"
